--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Crossy Road Game Clone</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styke.css" />
   </head>
   <body>
     <div id="counter">0</div>
